cleaned up and fixed warnings